tests/type/errors/bad-multiple-return.xi
foo() : int, int {
	return 1, 1
}

bar () : int, int {
    return foo()
}